# libimagequant-wasm

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
examples/: test.html
src/: index.ts  lib.rs  worker.ts
tests/: compression-benchmark.test.ts  helpers.ts  high-level-api.test.ts  low-level-wasm.test.ts  result-validation.test.ts
