[package]
name = "libimagequant-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Akshet Pandey <argetlam.akshet@gmail.com>"]
description = "WASM bindings for libimagequant image quantization library"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
imagequant = { version = "4", default-features = false }
console_error_panic_hook = "0.1"
png = "0.18"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "ImageData",
  "Worker",
  "MessageEvent",
  "DedicatedWorkerGlobalScope",
]

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Enable WASM-specific optimizations
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]